@@ -15,6 +15,10 @@
 	* Optional support contributed by Ben Collins <bcollins@debian.org> 
 	    for the kernel init chroot patch by Werner Almesberger, which 
 	    allows init to chroot to a new device, and umount the old one.
+	* added (and documented) "-n" option for head - 
+	    contributed Friedrich Vedder <fwv@myrtle.lahn.de>
+	* Cleanup for a number of usage messages -- also 
+	    contributed Friedrich Vedder <fwv@myrtle.lahn.de>
 	* Fixed bug that wouldn't let one chown a symlink -- it would
 	  always dereference before.  -beppu
 
